--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ $RECYCLE.BIN/
 package-lock.json
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
+
+postgres_data
