--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
     "start": "tsc && node --env-file=.env dist/index.js",
-    "lint": "eslint",
-    "migrations:generate": "sequelize-cli migration:generate --name",
-    "migrations:run": "sequelize-cli db:migrate",
-    "migrations:revert": "sequelize-cli db:migrate:undo",
-    "migrations:delete": "sequelize-cli db:migrate:undo:all"
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +16,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
-    "@types/sequelize": "^4.28.20",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
-    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
@@ -36,7 +30,6 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "pg-hstore": "^2.3.4"
   }
 }
