--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SERVER_PORT=number
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb
+DATABASE_URL="postgresql://user:password@localhost:5432/mydb"
