--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@prisma/client": "^5.17.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "joi": "^17.13.3",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4"
+    "joi": "^17.13.3"
   }
 }
