--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,23 +12,17 @@ services:
     volumes:
       - ../postgres_data:/var/lib/postgresql/data
 
-  # pgadmin:
-  #   image: dpage/pgadmin4
-  #   environment:
-  #     - PGADMIN_DEFAULT_EMAIL=admin@mail.com
-  #     - PGADMIN_DEFAULT_PASSWORD=root
-  #   ports:
-  #     - 5050:80
-
   app:
     build:
       context: ../
       dockerfile: .devcontainer/Dockerfile
     depends_on:
       - postgres
-    command: dev
+    # command: dev
+    command: sleep infinity
     ports:
       - "3000:3000"
+      - "9229:9229"
     volumes:
       - ..:/usr/src
       ## Nest line prevents to over write and delete node_module container folder
