--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
     "start": "tsc && node --env-file=.env dist/index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:migrate": "npx prisma migrate dev",
+    "db:create-migration": "npx prisma migrate dev --name",
+    "db:client-generate": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
